2003-10-21  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.h model.cpp
	  - changed model format from mdl to 3ds
	    now you can load 3ds models directly, with more than one
	    texture per model
	  - converted all models to new format

2003-08-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* ai.cpp
	  - made gun shell shooting with aiming.
	    damage simulation is missing, that means a sub is killed
	    immidiatly after it is hit by a shell.

2003-08-05  Markus Petermann  <m.petermann@gmx.net>
	* global_data.h, global_data.cpp
	  - New texture object cloudsbackgr introduced.
	* ships_sunk_display.cpp
	  - cloudsbackgr is now used as screen background

2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* subsim.cpp
	  - fixed wrong text numbers in create custom mission.

2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* made release 0.0.12 and increased version number to 0.0.13

2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* fixed makedatapack. some files missing, we need a new release.

2003-08-03  Thorsten Jordan <thorsten_jordan@gmx.de>
	* submarine.cpp
	  - added sub model IXc/40 (most numerous type IX) with all
	    dependant files. 3d model is there, but looks awful yet.

2003-08-02  Thorsten Jordan <thorsten_jordan@gmx.de>
	* font.cpp
	  - new print function for wrap around texts
	    (one bug still to be found and fixed.)
	* sub_damage_display.cpp
	  - new popup, fixed bug.
	* system.cpp texture.cpp
	  - moved draw image functions to texture class. functions can still
	    be called via system class.

2003-07-31  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp game.cpp
	  - support for multiple cloud textures and one new cloud texture.
	* sub_damage_display.cpp submarine.cpp
	  - damages stored as finer values, adapted display.
	    now damages can be accumulated.
	* submarine.cpp
	  - all parts visible in damage display are now also damageable.
	  - more information is shown about damages.
