@@ -123,18 +123,12 @@ void user_interface::draw_water(const vector3& viewpos, angle dir, unsigned wave
 	viewpostexoff.x = floor(viewpos.x * texscalefac);
 	viewpostexoff.y = floor(viewpos.y * texscalefac);
 	for (unsigned w = 0; w <= WAVEDEPTH; ++w) {
-		//HACK 05.10.2003
 		if (w == WAVEDEPTH) zdist = max_view_dist;
-		//END HACK
 		vector2 viewbase = viewpos.xy() + viewdir * zdist + viewleft * zdist * tanfovx2;
 		double viewleftfac = -2 * zdist * tanfovx2 / WAVESX;
 		for (unsigned p = 0; p <= WAVESX; ++p) {
 			// outer border of water must have height 0 to match horizon face
-			double height = (w < WAVEDEPTH
-			//HACK 05.10.2003
-			-1
-			//END HACK
-			) ? get_waterheight((float)viewbase.x, (float)viewbase.y, (int)wavephase) : 0;
+			double height = (w < WAVEDEPTH-1) ? get_waterheight((float)viewbase.x, (float)viewbase.y, (int)wavephase) : 0;
 			verticecoords.push_back(viewbase.x);
 			verticecoords.push_back(viewbase.y);
 			verticecoords.push_back(height);
@@ -151,26 +145,6 @@ void user_interface::draw_water(const vector3& viewpos, angle dir, unsigned wave
 		zdist += WAVESIZE;
 	}
 
-//HACK 05.10.2003
-/*	
-	// additional vertices for horizon face
-	vector2 horizon1 = viewpos.xy() + viewdir * max_view_dist;
-	vector2 horizon2 = viewleft * max_view_dist * tanfovx2;
-	vector2 horizonl = horizon1 + horizon2;
-	vector2 horizonr = horizon1 - horizon2;
-	verticecoords.push_back(horizonl.x);
-	verticecoords.push_back(horizonl.y);
-	verticecoords.push_back(0);
-	texturecoords.push_back(texscalefac * horizonl.x - viewpostexoff.x);
-	texturecoords.push_back(texscalefac * horizonl.y - viewpostexoff.y);
-	verticecoords.push_back(horizonr.x);
-	verticecoords.push_back(horizonr.y);
-	verticecoords.push_back(0);
-	texturecoords.push_back(texscalefac * horizonr.x - viewpostexoff.x);
-	texturecoords.push_back(texscalefac * horizonr.y - viewpostexoff.y);
-*/
-//END HACK	
-	
 	glVertexPointer(3, GL_FLOAT, 0, &verticecoords[0]);
 	glTexCoordPointer(2, GL_FLOAT, 0, &texturecoords[0]);
 
@@ -238,17 +212,6 @@ void user_interface::draw_water(const vector3& viewpos, angle dir, unsigned wave
 		++vertexnr;
 	}
 
-// HACK 05.10.2003	
-/*
-	// horizon faces
-	glArrayElement(verts-WAVESX-1);
-	glArrayElement(verts+1);
-	glArrayElement(verts);
-	glArrayElement(verts-WAVESX-1);
-	glArrayElement(verts-1);
-	glArrayElement(verts+1);
-*/	
-//END HACK	
 	glEnd();
 	
 	glDisableClientState(GL_VERTEX_ARRAY);
